# ichi

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs  generate_icon.py  ichi.iss  resource.rc
.github/workflows/: release.yml
src/: engine.rs  main.rs
